# reward-model-bias-auditor

./: .gitignore  README.md  pyproject.toml
outputs/: model_summary.csv  semantic_consistency.csv
outputs/hf/: model_summary.csv  report.md  scores.csv  semantic_consistency.csv  summary.csv
scripts/: run_demo.py  run_hf_audit.py
src/reward_model_bias_auditor/: __init__.py  analysis.py  benchmark.py  hf_runner.py  models.py  plotting.py  reporting.py  scoring.py
tests/: test_pipeline.py
