[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reward-model-bias-auditor"
version = "0.1.0"
description = "Controlled perturbation benchmark for reward-model bias auditing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.0.0", "pandas>=2.0.0", "matplotlib>=3.8.0"]

[project.optional-dependencies]
huggingface = ["transformers>=4.45.0", "torch>=2.2.0"]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
